@@ -24,7 +24,7 @@ Credits.
 
 ### Peter Scargill (http://tech.scargill.net/) ###
 
-Last piece in the puzzle, that turns of the ESP8266 messages, namely ets_printf
+Last piece in the puzzle, that turns off the ESP8266 messages, namely ets_printf
 still works.
 
 ### Dave Hylands (http://www.davehylands.com/) ###
