@@ -4,8 +4,8 @@ TODO
 |File | Scope | Item |
 |:--- | :---: | :--- |
 |*na* | Network | Add NTP. |
-|*na* | Network | Add OTA update. |
-|*na* | Network | Add client and stand-alone mode (client/AP). (*)|
+|*na* | Network | Add OTA update. (*)|
+|*na* | Network | Add client and stand-alone mode (client/AP). |
 |*na* | Network, slighttp | Add WebSockets. |
 
 (*) Probably not possible on 512Kb flash.
