@@ -4,6 +4,9 @@
  *
  * @brief Websocket (RFC6455) connection handling.
  * 
+ * In true ESP8266 fashion, a sent callback must happen between
+ * sending data.
+ * 
  * @copyright
  * Copyright 2015 Martin Bo Kristensen Grønholdt <oblivion@@ace2>
  * 
@@ -28,14 +31,93 @@
 #include <stdbool.h>
 #include <inttypes.h>
 #include "user_config.h"
-#include "tools/sha1.h"
-#include "tools/jsmn.h"
-#include "tools/base64.h"
-#include "tools/strxtra.h"
-#include "slighttp/http.h"
-#include "slighttp/http-tcp.h"
-#include "slighttp/http-response.h"
+//#include "tools/sha1.h"
+//#include "tools/base64.h"
+//#include "tools/strxtra.h"
+//#include "slighttp/http.h"
+//#include "slighttp/http-tcp.h"
+//#include "slighttp/http-response.h"
 #include "net/websocket.h"
+
+
+struct ws_handler ws_handlers[WS_MAX_HANDLERS];
+unsigned char ws_n_handlers = 0;
+
+/**
+ * @brief Register a WebSocket protocol handler.
+ * 
+ * @param handler Pointer to a ws_handler structure with handler data.
+ * @return Handler ID on success, negative value on error.
+ */
+int ws_register_handler(struct ws_handler handler)
+{
+	unsigned char i;
+	
+	debug(" Registering WebSocket protocol handler \"%s\".", handler.protocol);
+	
+	//Find an empty entry.
+	for (i = 0; !ws_handlers[i].protocol && (i < ws_n_handlers); i++);
+	
+	if (ws_handlers[i].protocol)
+	{
+		debug(" Adding handler with ID %d.\n", i);
+		os_memcpy(ws_handlers + i, &handler, sizeof(struct ws_handler));
+	}
+	else
+	{
+		error(" No more handlers allowed.\n");
+		return(-1);
+	}
+	return(i);
+}
+
+/**
+ * @brief Unregister a webSocket protocol handler.
+ */
+bool ws_unregister_handler(ws_handler_id_t handler_id)
+{
+	unsigned char i;
+	
+	debug(" Removing WebSocket protocol handler with ID %d.", handler_id);
+	if (handler_id > WS_MAX_HANDLERS)
+	{
+		error(" Handler ID is wrong.\n");
+		return(false);
+	}
+	
+	//Find the last entry after the handler that is to be removed.
+	for (i = handler_id; ws_handlers[i].protocol && (i < ws_n_handlers); i++);
+	
+	if (ws_handlers[i].protocol)
+	{
+		debug(" Overwriting with last handler %d.\n", i);
+		os_memcpy(ws_handlers + handler_id, ws_handlers + i, sizeof(struct ws_handler));
+		os_memset(ws_handlers + i, 0, sizeof(struct ws_handler));
+	}
+	else
+	{
+		debug(" Zeroing handler data %d.\n", handler_id);
+		os_memset(ws_handlers + handler_id, 0, sizeof(struct ws_handler));
+	}
+	return(true);
+}
+
+int ws_find_handler(char *protocol)
+{
+	int i;
+	
+	debug("Finding WebSocket handler for protocol \"%s\".\n", protocol);
+	
+	for (i = 0; i < ws_n_handlers; i++)
+	{
+		if (os_strcmp(ws_handlers[i].protocol, protocol) != 0)
+		{
+			debug(" Protocol ID %d.\n", i);
+			return(i);
+		}
+	}
+	warn(" Could not find a matching protocol handler.\n");
+}
 
 /**
  * @brief Parse WebSocket frame header.
@@ -107,6 +189,46 @@ static size_t ws_parse_frame(char *data, struct ws_frame *frame)
 	return(data_pos - data);
 }
 
+
+static void ws_unmask(char *data, struct ws_frame *frame)
+{
+	uint64_t i;
+	
+	for (i = 0; i < frame->payload_len; i++)
+	{
+		frame->data[i] = data[i] ^ frame->masking_key[i % 4];
+	}	
+}	
+
+static void ws_handle_binary(struct ws_frame *frame, struct tcp_connection *connection)
+{
+	debug(" Binary frame.\n");
+}
+
+static void ws_handle_text(struct ws_frame *frame, struct tcp_connection *connection)
+{
+	debug(" Text frame.\n");
+}
+
+static void ws_handle_control(struct ws_frame *frame, struct tcp_connection *connection)
+{
+	debug(" Control frame.\n");
+	switch(frame->opcode)
+	{
+		case WS_OPCODE_CLOSE:
+			ws_handle_control(frame, connection);
+			break;
+		case WS_OPCODE_PING:
+			ws_handle_control(frame, connection);
+			break;
+		case WS_OPCODE_PONG:
+			ws_handle_control(frame, connection);
+			break;
+		default:
+			debug(" Uknown frame type 0x%x.\n", frame->opcode);
+	}
+}
+
 /**
  * @brief Called when data has been received.
  * 
@@ -117,66 +239,41 @@ static size_t ws_parse_frame(char *data, struct ws_frame *frame)
 static void ws_recv_cb(struct tcp_connection *connection)
 {
 	struct ws_frame frame;
-	uint64_t i;
 	size_t payload_offset;
 	
 	debug("WebSocket data received, %d bytes.\n", connection->callback_data.length);
 	db_hexdump(connection->callback_data.data, connection->callback_data.length);
 	payload_offset = ws_parse_frame(connection->callback_data.data, &frame);
-	debug(" Payload at %d size %" PRIu64 ".\n", payload_offset, frame.payload_len);
-	
-	if (frame.opcode == WS_OPCODE_TEXT)
+	if (!frame.mask)
 	{
-		debug(" Text frame.\n");
-		if (frame.mask)
+		error(" WebSocket data not masked.\n");
+		return;
+	}
+	debug(" Payload at %d size %" PRIu64 ".\n", payload_offset, frame.payload_len);
+
+	if (frame.opcode < WS_OPCODE_RES7)
+	{
+		debug(" Data frame.\n");
+		frame.data = db_malloc(frame.payload_len + 1, "frame.data ws_recv_cb");
+		ws_unmask(connection->callback_data.data + payload_offset, &frame);
+		frame.data[frame.payload_len] = '\0';
+		debug(" Data %" PRIu64 " bytes.\n", frame.payload_len);
+
+		switch(frame.opcode)
 		{
-			debug(" Data is masked.\n");
-			frame.data = db_malloc(frame.payload_len + 1, "frame.data ws_recv_cb");
-			for (i = 0; i < frame.payload_len; i++)
-			{
-				frame.data[i] = connection->callback_data.data[i + payload_offset] ^ frame.masking_key[i % 4];
-			}	
-		
-			frame.data[frame.payload_len] = '\0';
-			debug(" Data %" PRIu64 " bytes: %s.\n", frame.payload_len, frame.data);
-			
-			/*
-			 * wifiswitch protocol code.
-			 */
-			jsmn_parser parser;
-			jsmntok_t tokens[10];
-			int n_tokens;
-			
-			jsmn_init(&parser);
-			n_tokens  = jsmn_parse(&parser, frame.data, frame.payload_len, tokens, 10);
-			
-			debug(" %d JSON tokens received.\n", n_tokens);
-			if ( (n_tokens < 3) || tokens[0].type != JSMN_OBJECT)
-			{
-				warn("Could not parse JSON request.\n");
-				return;
-			}
-			for (unsigned int i = 1; i < n_tokens; i++)
-			{
-				debug(" JSON token %d.\n", i);
-				if (tokens[i].type == JSMN_STRING)
-				{
-					debug(" JSON token start with a string.\n");
-					if (strncmp(frame.data + tokens[i].start, "type", 4) == 0)
-					{
-						i++;
-						if (tokens[i].type == JSMN_STRING)
-						{
-							debug(" JSON string comes next.\n");
-							
-							char *type = frame.data + tokens[i].start;
-							debug(" Request type %s.\n", type);							
-						}
-					}
-				}
-			}
+			case WS_OPCODE_TEXT:
+				ws_handle_text(&frame, connection);
+				break;
+			case WS_OPCODE_BIN:
+				ws_handle_binary(&frame, connection);
+				break;
+			default:
+				debug(" Unknown frame type 0x%x.\n", frame.opcode);
 		}
-		ws_send_text("{ \"type\" : \"gpio\", \"gpios\" : [ 0, 1 ] }", connection);
+	}
+	else
+	{
+		ws_handle_control(&frame, connection);
 	}
 }
 
