@@ -53,7 +53,7 @@ int http_response_mutex = 0;
  * 
  * @param connection Pointer to the connection that has connected.
  */
-void tcp_connect_cb(struct tcp_connection *connection)
+void http_tcp_connect_cb(struct tcp_connection *connection)
 {
     struct http_request *request;
     
@@ -74,7 +74,7 @@ void tcp_connect_cb(struct tcp_connection *connection)
  * 
  * @param connection Pointer to the connection that has had an error.
  */
-void tcp_reconnect_cb(struct tcp_connection *connection)
+void http_tcp_reconnect_cb(struct tcp_connection *connection)
 {  
     debug("HTTP reconnect (%p).\n", connection);
 }
@@ -87,7 +87,7 @@ void tcp_reconnect_cb(struct tcp_connection *connection)
  * 
  * @param connection Pointer to the connection that has disconnected. 
  */
-void tcp_disconnect_cb(struct tcp_connection *connection)
+void http_tcp_disconnect_cb(struct tcp_connection *connection)
 {
     debug("HTTP disconnect (%p).\n", connection);
 }
@@ -97,7 +97,7 @@ void tcp_disconnect_cb(struct tcp_connection *connection)
  * 
  * @param connection Pointer to the connection that is finished.
  */
-void tcp_write_finish_cb(struct tcp_connection *connection)
+void http_tcp_write_finish_cb(struct tcp_connection *connection)
 {
 	debug("Done writing (%p).\n", connection);
 }
@@ -109,7 +109,7 @@ void tcp_write_finish_cb(struct tcp_connection *connection)
  * 
  * @param connection Pointer to the connection that received the data.
  */
-void tcp_recv_cb(struct tcp_connection *connection)
+void http_tcp_recv_cb(struct tcp_connection *connection)
 {
 	void *buffer_ptr;
 	signed int ret;
@@ -164,7 +164,7 @@ void tcp_recv_cb(struct tcp_connection *connection)
     debug(" Request %p done.\n", request);
 }
 
-void tcp_sent_cb(struct tcp_connection *connection)
+void http_tcp_sent_cb(struct tcp_connection *connection)
 {
 	struct http_request *request = connection->user;
 	signed int ret = 0;
